--- a/skeleton/docker-compose.yml
+++ b/skeleton/docker-compose.yml
@@ -12,10 +12,14 @@ services:
     build: ./lssa_fe
     ports:
       - '8001:80'
+  lssa_fe2:
+    build: ./lssa_fe2
+    ports:
+      - '8002:80'
   lssa_be:
     build: ./lssa_be
     ports:
-      - '8002:80'
+      - '8003:80'
     depends_on:
       - lssa_db
 
